src/objects/Site_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Site Profiles</relationshipLabel>
        <relationshipName>Site_Profiles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>To be populated by FormAssembly form submission.</description>
        <inlineHelpText>To be populated by FormAssembly form submission.</inlineHelpText>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Annual 2019</fullName>
                </value>
                <value>
                    <fullName>Annual 2020</fullName>
                </value>
                <value>
                    <fullName>Annual 2021</fullName>
                </value>
                <value>
                    <fullName>Annual 2022</fullName>
                </value>
                <value>
                    <fullName>Annual 2023</fullName>
                </value>
                <value>
                    <fullName>Annual 2024</fullName>
                </value>
                <value>
                    <fullName>Annual 2025</fullName>
                </value>
                <value>
                    <fullName>Annual 2026</fullName>
                </value>
                <value>
                    <fullName>Annual 2027</fullName>
                </value>
                <value>
                    <fullName>Annual 2028</fullName>
                </value>
                <value>
                    <fullName>Annual 2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthySteps_Specialist_4_Licenses__c</fullName>
        <formula>HealthySteps_Specialist_4__r.C4G_Licenses_Certifications__c</formula>
        <label>HealthySteps Specialist 4 Licenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthySteps_Specialist_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Specialist 4</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (HealthySteps Specialist 4)</relationshipLabel>
        <relationshipName>Site_Profiles9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c4g_SiteProfile_Grant_Funders__c</fullName>
        <label>Grant Funders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Common_Family_Languages_at_Practice__c</fullName>
        <label>Common Family Languages at Practice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Chinese (Cantonese)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Mandarin)</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French Creole</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Community_Type__c</fullName>
        <label>Community Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Data_Collection_Systems__c</fullName>
        <label>Data Collection Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMR</fullName>
                </value>
                <value>
                    <fullName>Microsoft Excel</fullName>
                </value>
                <value>
                    <fullName>Microsoft Access</fullName>
                </value>
                <value>
                    <fullName>Efforts to Outcomes</fullName>
                </value>
                <value>
                    <fullName>Program Information Management System</fullName>
                </value>
                <value>
                    <fullName>Funder data system (e.g., Healthy Beginnings, MIECHV, SAMIS)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Designations_Accreditations__c</fullName>
        <label>Designations/Accreditations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountable Care Organization (ACO)</fullName>
                </value>
                <value>
                    <fullName>Federally Qualified Health Center (FQHC)</fullName>
                </value>
                <value>
                    <fullName>Patient Centered Medical Home (PCMH)</fullName>
                </value>
                <value>
                    <fullName>NCQA Certification</fullName>
                </value>
                <value>
                    <fullName>Pediatric Accountable Care Organization (PACO)</fullName>
                </value>
                <value>
                    <fullName>Rural Health Clinic (RHC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Electric_Medical_Record_System__c</fullName>
        <label>Electric Medical Record System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allscripts</fullName>
                </value>
                <value>
                    <fullName>Athena</fullName>
                </value>
                <value>
                    <fullName>Care360</fullName>
                </value>
                <value>
                    <fullName>eClinicalWorks</fullName>
                </value>
                <value>
                    <fullName>Epic</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Other EMR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Estimated_Children_0_3_Served__c</fullName>
        <label>Estimated # Children 0-3 Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Funding_Sources__c</fullName>
        <label>Funding Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tobacco settlement funds</fullName>
                </value>
                <value>
                    <fullName>Tobacco tax funds</fullName>
                </value>
                <value>
                    <fullName>Project LAUNCH (Linking Actions for Unmet Needs in Children’s Health)</fullName>
                </value>
                <value>
                    <fullName>GME/Residency training funds</fullName>
                </value>
                <value>
                    <fullName>Indian Health Service (IHS)</fullName>
                </value>
                <value>
                    <fullName>Health system, hospital or pediatric department funds (including health system reinvestment)</fullName>
                </value>
                <value>
                    <fullName>Philanthropic and foundation funding</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Department of Defense</fullName>
                </value>
                <value>
                    <fullName>Other state funds</fullName>
                </value>
                <value>
                    <fullName>Other federal funds</fullName>
                </value>
                <value>
                    <fullName>Other non-state/federal funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_1_Organization__c</fullName>
        <formula>cfg_HealthySteps_Specialist_1__r.C4G_Organization__c</formula>
        <label>HealthySteps Specialist 1 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_2_Organization__c</fullName>
        <formula>cfg_HealthySteps_Specialist_2__r.C4G_Organization__c</formula>
        <label>HealthySteps Specialist 2 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_3_Organization__c</fullName>
        <formula>cfg_HealthySteps_Specialist_3__r.C4G_Organization__c</formula>
        <label>HealthySteps Specialist 3 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_6_Education__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_6__r.C4G_Highest_Level_of_Education__c )</formula>
        <label>HealthySteps Specialist 6 Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Bilingual__c</fullName>
        <formula>TEXT(cfg_HealthySteps_Specialist_1__r.C4G_Bilingual_Multilingual__c)</formula>
        <label>HealthySteps Specialist 1 Bilingual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Education__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_1__r.C4G_Highest_Level_of_Education__c )</formula>
        <label>HealthySteps Specialist 1 Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Email__c</fullName>
        <formula>cfg_HealthySteps_Specialist_1__r.Email</formula>
        <label>HealthySteps Specialist 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_FTE__c</fullName>
        <formula>TEXT(cfg_HealthySteps_Specialist_1__r.C4G_HealthySteps_FTE__c)</formula>
        <label>HealthySteps Specialist 1 FTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Job_Title__c</fullName>
        <formula>cfg_HealthySteps_Specialist_1__r.Title</formula>
        <label>HealthySteps Specialist 1 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Licenses__c</fullName>
        <formula>cfg_HealthySteps_Specialist_1__r.C4G_Licenses_Certifications__c</formula>
        <label>HealthySteps Specialist 1 Licenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1_Name__c</fullName>
        <formula>TEXT(cfg_HealthySteps_Specialist_1__r.Salutation) &amp; " " &amp;  cfg_HealthySteps_Specialist_1__r.FirstName &amp; " " &amp;  cfg_HealthySteps_Specialist_1__r.LastName</formula>
        <label>HealthySteps Specialist 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Specialist 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (HealthySteps Specialist 1)</relationshipLabel>
        <relationshipName>Site_Profiles6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Bilingual__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_2__r.C4G_Bilingual_Multilingual__c )</formula>
        <label>HealthySteps Specialist 2 Bilingual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Education__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_2__r.C4G_Highest_Level_of_Education__c )</formula>
        <label>HealthySteps Specialist 2 Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Email__c</fullName>
        <formula>cfg_HealthySteps_Specialist_2__r.Email</formula>
        <label>HealthySteps Specialist 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_FTE__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_2__r.C4G_HealthySteps_FTE__c )</formula>
        <label>HealthySteps Specialist 2 FTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Job_Title__c</fullName>
        <formula>cfg_HealthySteps_Specialist_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HealthySteps Specialist 2 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Licenses__c</fullName>
        <formula>cfg_HealthySteps_Specialist_2__r.C4G_Licenses_Certifications__c</formula>
        <label>HealthySteps Specialist 2 Licenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2_Name__c</fullName>
        <formula>TEXT(cfg_HealthySteps_Specialist_2__r.Salutation) &amp; " " &amp;  cfg_HealthySteps_Specialist_2__r.FirstName &amp; " " &amp;  cfg_HealthySteps_Specialist_2__r.LastName</formula>
        <label>HealthySteps Specialist 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Specialist 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (HealthySteps Specialist 2)</relationshipLabel>
        <relationshipName>Site_Profiles7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Bilingual__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_3__r.C4G_Bilingual_Multilingual__c )</formula>
        <label>HealthySteps Specialist 3 Bilingual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Education__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_3__r.C4G_Highest_Level_of_Education__c )</formula>
        <label>HealthySteps Specialist 3 Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Email__c</fullName>
        <formula>cfg_HealthySteps_Specialist_3__r.Email</formula>
        <label>HealthySteps Specialist 3 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_FTE__c</fullName>
        <formula>TEXT( cfg_HealthySteps_Specialist_3__r.C4G_HealthySteps_FTE__c )</formula>
        <label>HealthySteps Specialist 3 FTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Job_Title__c</fullName>
        <formula>cfg_HealthySteps_Specialist_3__r.Title</formula>
        <label>HealthySteps Specialist 3 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Licenses__c</fullName>
        <formula>cfg_HealthySteps_Specialist_3__r.C4G_Licenses_Certifications__c</formula>
        <label>HealthySteps Specialist 3 Licenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3_Name__c</fullName>
        <formula>TEXT(cfg_HealthySteps_Specialist_3__r.Salutation) &amp; " " &amp;  cfg_HealthySteps_Specialist_3__r.FirstName &amp; " " &amp;  cfg_HealthySteps_Specialist_3__r.LastName</formula>
        <label>HealthySteps Specialist 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialist_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthySteps Specialist 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (HealthySteps Specialist 3)</relationshipLabel>
        <relationshipName>Site_Profiles8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_HealthySteps_Specialists_Count__c</fullName>
        <label>HealthySteps Specialists Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Length_of_current_funding__c</fullName>
        <label>Length of current funding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 – 6 months</fullName>
                </value>
                <value>
                    <fullName>6 – 12 months</fullName>
                </value>
                <value>
                    <fullName>1 – 2 years</fullName>
                </value>
                <value>
                    <fullName>2 – 3 years</fullName>
                </value>
                <value>
                    <fullName>More than 3 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_MIECHV_Programs_Offered__c</fullName>
        <label>MIECHV Programs Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment and Biobehavioral Catch-Up (ABC) Intervention</fullName>
                </value>
                <value>
                    <fullName>Child First</fullName>
                </value>
                <value>
                    <fullName>Healthy Families America</fullName>
                </value>
                <value>
                    <fullName>Family Connects</fullName>
                </value>
                <value>
                    <fullName>Healthy Beginnings</fullName>
                </value>
                <value>
                    <fullName>Minding the Baby</fullName>
                </value>
                <value>
                    <fullName>Nurse-Family Partnership</fullName>
                </value>
                <value>
                    <fullName>Parents As Teachers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Nurse_Practitioner_Count__c</fullName>
        <label>Nurse Practitioner Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Offers_MIECHV_Enrollment_Referrals__c</fullName>
        <label>Offers MIECHV Enrollment/Referrals</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Onsite_Support__c</fullName>
        <label>Onsite Support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prenatal services</fullName>
                </value>
                <value>
                    <fullName>Lactation education and/or counseling</fullName>
                </value>
                <value>
                    <fullName>Mental health services</fullName>
                </value>
                <value>
                    <fullName>Nutrition consultant</fullName>
                </value>
                <value>
                    <fullName>Health educator/community health worker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Other_Common_Family_Languages__c</fullName>
        <label>Other Common Family Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Data_Collection_Systems__c</fullName>
        <label>Other Data Collection Systems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Designations_Accreditations__c</fullName>
        <label>Other Designations/Accreditations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_EMR__c</fullName>
        <label>Other EMR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Formal_Program_Partnerships__c</fullName>
        <label>Other Formal Program Partnerships</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Funders__c</fullName>
        <label>Other Funders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Information__c</fullName>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cfg_Other_MIECHV_Programs_Offered__c</fullName>
        <label>Other MIECHV Programs Offered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Practice_Setting_Specified__c</fullName>
        <label>Other Practice Setting Specified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Other_Reimbursement_Sources__c</fullName>
        <label>Other Reimbursement Sources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Assistant_Count__c</fullName>
        <label>Physician Assistant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1_Email__c</fullName>
        <formula>cfg_Physician_Champion_1__r.Email</formula>
        <label>Physician/Champion 1 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1_Job_Title__c</fullName>
        <formula>cfg_Physician_Champion_1__r.Title</formula>
        <label>Physician/Champion 1 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1_Name__c</fullName>
        <formula>TEXT( cfg_Physician_Champion_1__r.Salutation ) &amp; " " &amp;  cfg_Physician_Champion_1__r.FirstName &amp; " " &amp; cfg_Physician_Champion_1__r.LastName</formula>
        <label>Physician/Champion 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1_Organization__c</fullName>
        <formula>cfg_Physician_Champion_1__r.C4G_Organization__c</formula>
        <label>Physician/Champion 1 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1_Phone__c</fullName>
        <formula>cfg_Physician_Champion_1__r.Phone</formula>
        <label>Physician/Champion 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician/Champion 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (Physician/Champion 1)</relationshipLabel>
        <relationshipName>Site_Profiles3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2_Email__c</fullName>
        <formula>cfg_Physician_Champion_2__r.Email</formula>
        <label>Physician/Champion 2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2_Job_Title__c</fullName>
        <formula>cfg_Physician_Champion_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician/Champion 2 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2_Name__c</fullName>
        <formula>TEXT( cfg_Physician_Champion_2__r.Salutation ) &amp; " " &amp;  cfg_Physician_Champion_2__r.FirstName &amp; " " &amp; cfg_Physician_Champion_2__r.LastName</formula>
        <label>Physician/Champion 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2_Organization__c</fullName>
        <formula>cfg_Physician_Champion_2__r.C4G_Organization__c</formula>
        <label>Physician/Champion 2 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2_Phone__c</fullName>
        <formula>cfg_Physician_Champion_2__r.Phone</formula>
        <label>Physician/Champion 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician/Champion 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (Physician/Champion 2)</relationshipLabel>
        <relationshipName>Site_Profiles4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3_Email__c</fullName>
        <formula>cfg_Physician_Champion_3__r.Email</formula>
        <label>Physician/Champion 3 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3_Job_Title__c</fullName>
        <formula>cfg_Physician_Champion_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physician/Champion 3 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3_Name__c</fullName>
        <formula>TEXT( cfg_Physician_Champion_3__r.Salutation ) &amp; " " &amp;  cfg_Physician_Champion_3__r.FirstName &amp; " " &amp; cfg_Physician_Champion_3__r.LastName</formula>
        <label>Physician/Champion 3 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3_Organization__c</fullName>
        <formula>cfg_Physician_Champion_3__r.C4G_Organization__c</formula>
        <label>Physician/Champion 3 Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3_Phone__c</fullName>
        <formula>cfg_Physician_Champion_3__r.Phone</formula>
        <label>Physician/Champion 3 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician/Champion 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Site Profiles (Physician/Champion 3)</relationshipLabel>
        <relationshipName>Site_Profiles5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Physician_Count__c</fullName>
        <label>Physician Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Practice_Part_of_Network__c</fullName>
        <label>Practice Part of Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Practice_Trains_Residents__c</fullName>
        <label>Practice Trains Residents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Primary_Practice_Setting__c</fullName>
        <label>Primary Practice Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pediatric practice (private or group)</fullName>
                </value>
                <value>
                    <fullName>Medical school or university</fullName>
                </value>
                <value>
                    <fullName>Family medicine practice (private or group)</fullName>
                </value>
                <value>
                    <fullName>Academic medical center</fullName>
                </value>
                <value>
                    <fullName>Children’s hospital clinic</fullName>
                </value>
                <value>
                    <fullName>Community health clinic or center</fullName>
                </value>
                <value>
                    <fullName>Hospital-based clinic (not a children’s hospital)</fullName>
                </value>
                <value>
                    <fullName>Child health and development organization</fullName>
                </value>
                <value>
                    <fullName>Indian Health Service (IHS) or tribally-run healthcare facility</fullName>
                </value>
                <value>
                    <fullName>Department of Public Health clinic</fullName>
                </value>
                <value>
                    <fullName>Department of Defense hospital or clinic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Private_Meeting_Space_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Meeting Space Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Formal_Partnerships__c</fullName>
        <label>Program Formal Partnerships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Help Me Grow (HMG)</fullName>
                </value>
                <value>
                    <fullName>Circle of Security</fullName>
                </value>
                <value>
                    <fullName>Positive Parenting Program (Triple P)</fullName>
                </value>
                <value>
                    <fullName>Reach Out and Read (ROR)</fullName>
                </value>
                <value>
                    <fullName>Video Interaction Project (VIP)</fullName>
                </value>
                <value>
                    <fullName>Linking Actions for Unmet Needs in Children’s Health (Project LAUNCH)</fullName>
                </value>
                <value>
                    <fullName>Centering Pregnancy/Centering Parenting</fullName>
                </value>
                <value>
                    <fullName>Medical-Legal Partnership</fullName>
                </value>
                <value>
                    <fullName>National Pediatric Practice Community on Adverse Childhood Experiences (NPPC)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>